# ComfyUI_KimNodes

./: Crop_Paste.py  Distribute_Icons.py  Distribute_icons_in_grid.py  Face_yolo.py  KimFilter.py  README.md  Text_Match.py  YOLO_Crop.py  __init__.py  install_pixeloe.py  pyproject.toml  requirements.txt
Filter_algorithm/: adjust_gamma.py  apply_clahe.py
py/: Bitch_Filter.py  BoundingBox_Cropper.py  Crop_Paste.py  Distribute_Icons.py  Distribute_icons_in_grid.py  Edge_Element_Cropper.py  IconDistributeByGrid.py  Icon_Position_Cropper.py  Image_Classification.py  Image_List_Deduplicator.py  Image_List_Splitter.py  Image_Pixel_Filter.py  Image_Resize.py  Image_Square_Pad.py  JSON_Image_Compositor.py  KimFilter.py  KimHDR.py  Kim_image_metadata.py  LoRA_Metadata_Reader.py  LoadImageWithMetadata.py  Lora_Difference_extraction.py  MaskWhiteAreaRatio.py  Mask_Add_Switch.py  Mask_Noise_Cleaner.py  Max_Length_Image_List_Selector.py  Percentage_Cropper.py  Pixelate_Filter.py  Prompt_Loader.py  Prompt_Text.py  Save_Image.py  Seamless_Icon_Generator.py  Seamless_Icon_Generator_.py  Seamless_Tiling_Generator.py  Split_Mask.py  Square_Image_Expander.py  Text_Match.py  Text_Processor.py  Transparent_Area_Cropper.py  Transparent_Image_Filter.py  Whitening.py  (+4 more)
workflow/: Crop_Paste✂-.json  Gender matches the face(WD14) .json  IconDistributeByGrid🛑.json  Image_Classification🔍.json  Image_Classification🔍图像分类(WD14).json  Image_Square_Pad.json  Istribute_Icons🛑.json  Mask_Noise_Cleaner.json  Pixelate_Filter.json  Seamless_Icon_Generator🛑.json  Seamless_Template.json  (+3 more)
(+15 files in other folders)
