[project]
name = "comfyui_kimnodes"
description = "Image effects, icon layout processing, YOLO cropping — this toolbox is a node library organized according to my own needs."
version = "1.0.1"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/wjl0313/ComfyUI_KimNodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "kim"
DisplayName = "ComfyUI_KimNodes"
Icon = "🍊"
