[project]
name = "comfyui_kimnodes"
description = "ComfyUI node collection: icon layout & processing, YOLO intelligent cropping, image filters & enhancement, text processing tools, metadata management, mask handling and image classification in one comprehensive toolbox."
version = "1.0.5"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/wjl0313/ComfyUI_KimNodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "kim"
DisplayName = "ComfyUI_KimNodes"
Icon = "🍒"
